--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.1.0"
   }
 }
