--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "mongoose": "^8.3.3",
-    "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
-    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0"
