--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
+    "mongodb": "^6.6.2",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
     "react": "^18",
