--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
     "mongodb": "^6.6.2",
-    "mongoose": "^8.3.3",
+    "mongoose": "^8.13.2",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0"
